// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EcInputField renders properly custom attributes 1`] = `
<div
  class="ec-input-field my-class"
  data-test="ec-input-field"
  style="background-color: hotpink;"
>
  <label
    class="ec-input-field__label"
    data-test="ec-input-field__label"
    for="ec-input-field-1"
  >
    <span
      class="ec-input-field__label-text"
      data-test="ec-input-field__label-text"
    >
      label test
      <!--v-if-->
    </span>
    <span
      class="ec-input-field__note"
      data-test="ec-input-field__note"
    >
      note test
    </span>
  </label>
  <input
    class="ec-input-field__input"
    data-test="my-data-test ec-input-field__input"
    id="ec-input-field-1"
    type="text"
  />
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</div>
`;

exports[`EcInputField renders properly the icon when disabled 1`] = `
<div
  class="ec-input-field"
  data-test="ec-input-field"
>
  <label
    class="ec-input-field__label"
    data-test="ec-input-field__label"
    for="ec-input-field-1"
  >
    <span
      class="ec-input-field__label-text"
      data-test="ec-input-field__label-text"
    >
      label test
      <!--v-if-->
    </span>
    <span
      class="ec-input-field__note"
      data-test="ec-input-field__note"
    >
      note test
    </span>
  </label>
  <input
    class="ec-input-field__input ec-input-field__input--has-icon"
    data-test="ec-input-field__input"
    disabled=""
    id="ec-input-field-1"
    type="text"
  />
  <!--v-if-->
  <div
    class="ec-input-field__icon-wrapper tw-right-0 ec-input-field__icon-wrapper--is-disabled"
    data-test="ec-input-field__icon-wrapper"
  >
    <svg
      class="ec-icon ec-input-field__icon"
      data-test="ec-input-field__icon"
      height="20"
      width="20"
    >
      <use
        xlink:href="#ec-simple-check"
      />
    </svg>
  </div>
  <!--v-if-->
</div>
`;

exports[`EcInputField renders properly when disabled 1`] = `
<div
  class="ec-input-field"
  data-test="ec-input-field"
>
  <label
    class="ec-input-field__label"
    data-test="ec-input-field__label"
    for="ec-input-field-1"
  >
    <span
      class="ec-input-field__label-text"
      data-test="ec-input-field__label-text"
    >
      label test
      <!--v-if-->
    </span>
    <span
      class="ec-input-field__note"
      data-test="ec-input-field__note"
    >
      note test
    </span>
  </label>
  <input
    class="ec-input-field__input"
    data-test="ec-input-field__input"
    disabled=""
    id="ec-input-field-1"
    type="text"
  />
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</div>
`;

exports[`EcInputField renders properly when is loading 1`] = `
<div
  class="ec-input-field"
  data-test="ec-input-field"
>
  <label
    class="ec-input-field__label"
    data-test="ec-input-field__label"
    for="ec-input-field-1"
  >
    <span
      class="ec-input-field__label-text"
      data-test="ec-input-field__label-text"
    >
      label test
      <!--v-if-->
    </span>
    <span
      class="ec-input-field__note"
      data-test="ec-input-field__note"
    >
      note test
    </span>
  </label>
  <input
    class="ec-input-field__input ec-input-field__input--is-loading"
    data-test="ec-input-field__input"
    id="ec-input-field-1"
    type="text"
  />
  <!--v-if-->
  <div
    class="ec-input-field__icon-wrapper tw-right-0"
    data-test="ec-input-field__icon-wrapper"
  >
    <svg
      class="ec-icon ec-loading-icon ec-input-field__icon"
      data-test="ec-loading-icon"
      height="24"
      width="24"
    >
      <use
        xlink:href="#ec-simple-loading"
      />
    </svg>
  </div>
  <!--v-if-->
</div>
`;

exports[`EcInputField renders properly when readonly 1`] = `
<div
  class="ec-input-field"
  data-test="ec-input-field"
>
  <label
    class="ec-input-field__label"
    data-test="ec-input-field__label"
    for="ec-input-field-1"
  >
    <span
      class="ec-input-field__label-text"
      data-test="ec-input-field__label-text"
    >
      label test
      <!--v-if-->
    </span>
    <span
      class="ec-input-field__note"
      data-test="ec-input-field__note"
    >
      note test
    </span>
  </label>
  <input
    class="ec-input-field__input"
    data-test="ec-input-field__input"
    id="ec-input-field-1"
    readonly=""
    type="text"
  />
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</div>
`;

exports[`EcInputField renders properly when the labelTooltip prop is set 1`] = `
<div
  class="ec-input-field"
  data-test="ec-input-field"
>
  <label
    class="ec-input-field__label"
    data-test="ec-input-field__label"
    for="ec-input-field-1"
  >
    <span
      class="ec-input-field__label-text"
      data-test="ec-input-field__label-text"
    >
      label test
      <svg
        class="ec-icon ec-icon--interactive ec-input-field__tooltip"
        data-ec-tooltip-mock-content="Testing the labelTooltip prop"
        data-test="ec-input-field__tooltip ec-mock ec-tooltip-mock"
        height="14"
        width="14"
      >
        <use
          xlink:href="#ec-simple-info"
        />
      </svg>
    </span>
    <span
      class="ec-input-field__note"
      data-test="ec-input-field__note"
    >
      note test
    </span>
  </label>
  <input
    class="ec-input-field__input"
    data-test="ec-input-field__input"
    id="ec-input-field-1"
    type="text"
  />
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</div>
`;

exports[`EcInputField renders properly with the errorId from the parent 1`] = `
<div
  class="ec-input-field"
  data-test="ec-input-field"
>
  <label
    class="ec-input-field__label"
    data-test="ec-input-field__label"
    for="ec-input-field-1"
  >
    <span
      class="ec-input-field__label-text"
      data-test="ec-input-field__label-text"
    >
      label test
      <!--v-if-->
    </span>
    <span
      class="ec-input-field__note"
      data-test="ec-input-field__note"
    >
      note test
    </span>
  </label>
  <input
    aria-describedby="error-id-test"
    class="ec-input-field__input ec-input-field__input--has-error"
    data-test="ec-input-field__input"
    id="ec-input-field-1"
    type="text"
  />
  <!--v-if-->
  <!--v-if-->
  <div
    class="ec-input-field__error-text"
    data-test="ec-input-field__error-text"
    id="error-id-test"
  >
    Test error message
  </div>
</div>
`;

exports[`EcInputField renders properly with the given prop errorMessage 1`] = `
<div
  class="ec-input-field"
  data-test="ec-input-field"
>
  <label
    class="ec-input-field__label"
    data-test="ec-input-field__label"
    for="ec-input-field-1"
  >
    <span
      class="ec-input-field__label-text"
      data-test="ec-input-field__label-text"
    >
      label test
      <!--v-if-->
    </span>
    <span
      class="ec-input-field__note"
      data-test="ec-input-field__note"
    >
      note test
    </span>
  </label>
  <input
    aria-describedby="ec-input-field-error-1"
    class="ec-input-field__input ec-input-field__input--has-error"
    data-test="ec-input-field__input"
    id="ec-input-field-1"
    type="text"
  />
  <!--v-if-->
  <!--v-if-->
  <div
    class="ec-input-field__error-text"
    data-test="ec-input-field__error-text"
    id="ec-input-field-error-1"
  >
    error msg
  </div>
</div>
`;

exports[`EcInputField renders properly with the id from the parent 1`] = `
<div
  class="ec-input-field"
  data-test="ec-input-field"
>
  <label
    class="ec-input-field__label"
    data-test="ec-input-field__label"
    for="id-test"
  >
    <span
      class="ec-input-field__label-text"
      data-test="ec-input-field__label-text"
    >
      label test
      <!--v-if-->
    </span>
    <span
      class="ec-input-field__note"
      data-test="ec-input-field__note"
    >
      note test
    </span>
  </label>
  <input
    class="ec-input-field__input"
    data-test="ec-input-field__input"
    id="id-test"
    type="text"
  />
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</div>
`;

exports[`EcInputField renders properly without label 1`] = `
<div
  class="ec-input-field"
  data-test="ec-input-field"
>
  <label
    class="ec-input-field__label"
    data-test="ec-input-field__label"
    for="ec-input-field-1"
  >
    <!--v-if-->
    <span
      class="ec-input-field__note"
      data-test="ec-input-field__note"
    >
      note test
    </span>
  </label>
  <input
    class="ec-input-field__input"
    data-test="ec-input-field__input"
    id="ec-input-field-1"
    type="text"
  />
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</div>
`;

exports[`EcInputField renders properly without note 1`] = `
<div
  class="ec-input-field"
  data-test="ec-input-field"
>
  <label
    class="ec-input-field__label"
    data-test="ec-input-field__label"
    for="ec-input-field-1"
  >
    <span
      class="ec-input-field__label-text"
      data-test="ec-input-field__label-text"
    >
      label test
      <!--v-if-->
    </span>
    <!--v-if-->
  </label>
  <input
    class="ec-input-field__input"
    data-test="ec-input-field__input"
    id="ec-input-field-1"
    type="text"
  />
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</div>
`;

exports[`EcInputField renders properly without the error when the prop errorMessage is given and the isInGroup prop is not empty 1`] = `
<div
  class="ec-input-field"
  data-test="ec-input-field"
>
  <label
    class="ec-input-field__label"
    data-test="ec-input-field__label"
    for="ec-input-field-1"
  >
    <span
      class="ec-input-field__label-text"
      data-test="ec-input-field__label-text"
    >
      label test
      <!--v-if-->
    </span>
    <span
      class="ec-input-field__note"
      data-test="ec-input-field__note"
    >
      note test
    </span>
  </label>
  <input
    aria-describedby="ec-input-field-error-1"
    class="ec-input-field__input ec-input-field__input--is-in-group-right ec-input-field__input--has-error"
    data-test="ec-input-field__input"
    id="ec-input-field-1"
    type="text"
  />
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</div>
`;

exports[`EcInputField renders with bottom note 1`] = `
<div
  class="ec-input-field"
  data-test="ec-input-field"
>
  <label
    class="ec-input-field__label"
    data-test="ec-input-field__label"
    for="ec-input-field-1"
  >
    <span
      class="ec-input-field__label-text"
      data-test="ec-input-field__label-text"
    >
      label test
      <!--v-if-->
    </span>
    <span
      class="ec-input-field__note"
      data-test="ec-input-field__note"
    >
      note test
    </span>
  </label>
  <input
    class="ec-input-field__input"
    data-test="ec-input-field__input"
    id="ec-input-field-1"
    type="text"
  />
  <!--v-if-->
  <!--v-if-->
  <div
    class="ec-input-field__bottom-note"
    data-test="ec-input-field__bottom-note"
  >
    Random bottom note
  </div>
</div>
`;

exports[`EcInputField renders with the attrs min and max 1`] = `
<div
  class="ec-input-field"
  data-test="ec-input-field"
>
  <label
    class="ec-input-field__label"
    data-test="ec-input-field__label"
    for="ec-input-field-1"
  >
    <span
      class="ec-input-field__label-text"
      data-test="ec-input-field__label-text"
    >
      label test
      <!--v-if-->
    </span>
    <span
      class="ec-input-field__note"
      data-test="ec-input-field__note"
    >
      note test
    </span>
  </label>
  <input
    class="ec-input-field__input"
    data-test="ec-input-field__input"
    id="ec-input-field-1"
    max="10"
    min="5"
    type="number"
  />
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</div>
`;

exports[`EcInputField renders with warning bottom note 1`] = `
<div
  class="ec-input-field"
  data-test="ec-input-field"
>
  <label
    class="ec-input-field__label"
    data-test="ec-input-field__label"
    for="ec-input-field-1"
  >
    <span
      class="ec-input-field__label-text"
      data-test="ec-input-field__label-text"
    >
      label test
      <!--v-if-->
    </span>
    <span
      class="ec-input-field__note"
      data-test="ec-input-field__note"
    >
      note test
    </span>
  </label>
  <input
    class="ec-input-field__input"
    data-test="ec-input-field__input"
    id="ec-input-field-1"
    type="text"
  />
  <!--v-if-->
  <!--v-if-->
  <div
    class="ec-input-field__bottom-note ec-input-field__bottom-note--is-warning"
    data-test="ec-input-field__bottom-note"
  >
    Random bottom note
  </div>
</div>
`;

exports[`EcInputField renders without bottom note if error message is given 1`] = `
<div
  class="ec-input-field"
  data-test="ec-input-field"
>
  <label
    class="ec-input-field__label"
    data-test="ec-input-field__label"
    for="ec-input-field-1"
  >
    <span
      class="ec-input-field__label-text"
      data-test="ec-input-field__label-text"
    >
      label test
      <!--v-if-->
    </span>
    <span
      class="ec-input-field__note"
      data-test="ec-input-field__note"
    >
      note test
    </span>
  </label>
  <input
    aria-describedby="ec-input-field-error-1"
    class="ec-input-field__input ec-input-field__input--has-error"
    data-test="ec-input-field__input"
    id="ec-input-field-1"
    type="text"
  />
  <!--v-if-->
  <!--v-if-->
  <div
    class="ec-input-field__error-text"
    data-test="ec-input-field__error-text"
    id="ec-input-field-error-1"
  >
    Random error message
  </div>
</div>
`;

exports[`EcInputField should display properly with the given props 1`] = `
<div
  class="ec-input-field"
  data-test="ec-input-field"
>
  <label
    class="ec-input-field__label"
    data-test="ec-input-field__label"
    for="ec-input-field-1"
  >
    <span
      class="ec-input-field__label-text"
      data-test="ec-input-field__label-text"
    >
      label test
      <!--v-if-->
    </span>
    <span
      class="ec-input-field__note"
      data-test="ec-input-field__note"
    >
      note test
    </span>
  </label>
  <input
    class="ec-input-field__input"
    data-test="ec-input-field__input"
    id="ec-input-field-1"
    type="text"
  />
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</div>
`;

exports[`EcInputField should render given icon 1`] = `
<div
  class="ec-input-field"
  data-test="ec-input-field"
>
  <label
    class="ec-input-field__label"
    data-test="ec-input-field__label"
    for="ec-input-field-1"
  >
    <span
      class="ec-input-field__label-text"
      data-test="ec-input-field__label-text"
    >
      label test
      <!--v-if-->
    </span>
    <span
      class="ec-input-field__note"
      data-test="ec-input-field__note"
    >
      note test
    </span>
  </label>
  <input
    class="ec-input-field__input ec-input-field__input--has-icon"
    data-test="ec-input-field__input"
    id="ec-input-field-1"
    type="text"
  />
  <!--v-if-->
  <div
    class="ec-input-field__icon-wrapper tw-right-0"
    data-test="ec-input-field__icon-wrapper"
  >
    <svg
      class="ec-icon ec-input-field__icon"
      data-test="ec-input-field__icon"
      height="20"
      width="20"
    >
      <use
        xlink:href="#ec-simple-check"
      />
    </svg>
  </div>
  <!--v-if-->
</div>
`;

exports[`EcInputField should render given icon with given size 1`] = `
<div
  class="ec-input-field__icon-wrapper tw-right-0"
  data-test="ec-input-field__icon-wrapper"
>
  <svg
    class="ec-icon ec-input-field__icon"
    data-test="ec-input-field__icon"
    height="40"
    width="40"
  >
    <use
      xlink:href="#ec-simple-check"
    />
  </svg>
</div>
`;

exports[`EcInputField should render given icon with success colour 1`] = `
<div
  class="ec-input-field__icon-wrapper tw-right-0"
  data-test="ec-input-field__icon-wrapper"
>
  <svg
    class="ec-icon ec-icon--success ec-input-field__icon"
    data-test="ec-input-field__icon"
    height="20"
    width="20"
  >
    <use
      xlink:href="#ec-simple-check"
    />
  </svg>
</div>
`;

exports[`EcInputField should render given left-icon 1`] = `
<div
  class="ec-input-field"
  data-test="ec-input-field"
>
  <label
    class="ec-input-field__label"
    data-test="ec-input-field__label"
    for="ec-input-field-1"
  >
    <span
      class="ec-input-field__label-text"
      data-test="ec-input-field__label-text"
    >
      label test
      <!--v-if-->
    </span>
    <span
      class="ec-input-field__note"
      data-test="ec-input-field__note"
    >
      note test
    </span>
  </label>
  <input
    class="ec-input-field__input ec-input-field__input--has-left-icon"
    data-test="ec-input-field__input"
    id="ec-input-field-1"
    type="text"
  />
  <div
    class="ec-input-field__icon-wrapper tw-left-0"
    data-test="ec-input-field__left-icon-wrapper"
  >
    <svg
      class="ec-icon ec-input-field__icon tw-fill-gray-5"
      data-test="ec-input-field__left-icon"
      height="20"
      width="20"
    >
      <use
        xlink:href="#ec-simple-check"
      />
    </svg>
  </div>
  <!--v-if-->
  <!--v-if-->
</div>
`;

exports[`EcInputField should render given left-icon with given size 1`] = `
<div
  class="ec-input-field__icon-wrapper tw-left-0"
  data-test="ec-input-field__left-icon-wrapper"
>
  <svg
    class="ec-icon ec-input-field__icon tw-fill-gray-5"
    data-test="ec-input-field__left-icon"
    height="40"
    width="40"
  >
    <use
      xlink:href="#ec-simple-check"
    />
  </svg>
</div>
`;

exports[`EcInputField should render given left-icon with success colour 1`] = `
<div
  class="ec-input-field__icon-wrapper tw-left-0"
  data-test="ec-input-field__left-icon-wrapper"
>
  <svg
    class="ec-icon ec-icon--success ec-input-field__icon tw-fill-gray-5"
    data-test="ec-input-field__left-icon"
    height="20"
    width="20"
  >
    <use
      xlink:href="#ec-simple-check"
    />
  </svg>
</div>
`;

exports[`EcInputField should render with a sensitive class when isSensitive prop is set to true 1`] = `
<div
  class="ec-input-field"
  data-test="ec-input-field"
>
  <label
    class="ec-input-field__label"
    data-test="ec-input-field__label"
    for="ec-input-field-1"
  >
    <span
      class="ec-input-field__label-text"
      data-test="ec-input-field__label-text"
    >
      label test
      <!--v-if-->
    </span>
    <span
      class="ec-input-field__note"
      data-test="ec-input-field__note"
    >
      note test
    </span>
  </label>
  <input
    class="ec-input-field__input my-sensitive-content-test-class"
    data-test="ec-input-field__input"
    id="ec-input-field-1"
    type="text"
  />
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</div>
`;
